# RTL_test_case

./: docker-compose.yml  mongorestore.sh  pyproject.toml
app/: main.py
app/core/: aggregate_serv.py  dal.py  models.py  mongo_config.py  query.py  settings.py
app/utils/: bot_validation.py
tests/: conftest.py  docker-compose-test.yml  test_aggregate_serv.py
